--- a/index.html
+++ b/index.html
@@ -257,42 +257,23 @@
                     <br>
                 </div>
             </div>
-            <!--New Garden-->
+            <!--Lunar Birthdays-->
             <div class="row text-left align-items-center">
                 <div class="col-xs-12 col-lg-6">
-                    <img class="img-fluid" src="assets/images/newgarden.jpg" alt="">
+                    <img class="img-fluid" src="assets/images/lunarbirthdays.jpg" alt="">
                 </div>
                 <div class="col-xs-12 col-lg-6">
-                    <div class="proj-title">New Garden</div>
-                    <div class="proj-desc">Restaurant Point of Sale System</div>
+                    <div class="proj-title">Lunar Birthdays</div>
+                    <div class="proj-desc">Birthday Reminder & Converter</div>
                     <p>
-                        Created a Java Swing GUI, Point of Sale system that allows 
-                        self-service for food ordering during the pandemic. 
-                        It deploys PostgreSQL to store every menu item and dynamically
-                        retrieves the correct items based on the selected category.
-                        It also counts the frequency of each item so restocking is easier.
+                        Created a SwiftUI iOS app to save birthday profiles in core data
+                        and count down until the next. It will notify users of upcoming
+                        birthdays. The main idea is to help ABC's (American-born  Chinese)
+                        to help remember their family's birthdays since Lunar birthdays
+                        are never on the same day on Gregorian calendars.
                     </p>
-                    <button class="btn" onclick=" window.open('https://github.com/johnnyj2608/NewGarden','_blank')">GitHub</button>
-                </div>
-            </div>
-            <br>
-            <br>
-            <!--Loot Council-->
-            <div class="row text-left align-items-center">
-                <div class="col-xs-12 col-lg-6">
-                    <img class="img-fluid" src="assets/images/lootcouncil.jpg" alt="">
-                </div>
-                <div class="col-xs-12 col-lg-6">
-                    <div class="proj-title">Loot Council</div>
-                    <div class="proj-desc">Web Scraper & Reward Allocator</div>
-                    <p>
-                        Developed a Python script to construct reward assignments for 
-                        World of Warcraft guilds. It utilizes web scraping techniques 
-                        and GraphQL to extract data to be used in the criterion. 
-                        Environment variables are used to safeguard API keys.
-                        GitHub Actions will automatically run the script once a week.
-                    </p>
-                    <button class="btn" onclick=" window.open('https://github.com/johnnyj2608/LootCouncil','_blank')">GitHub</button>
+                    <button class="btn" onclick=" window.open('https://github.com/johnnyj2608/LunarBirthdays','_blank')">GitHub</button>
+                    <button class="btn"><a href="lunarbirthdays.html">Demo</a></button> 
                 </div>
             </div>
             <br>
@@ -313,26 +294,48 @@
                         the Google Sheet that hold all the reservations.
                     </p>
                     <button class="btn" onclick=" window.open('https://github.com/johnnyj2608/RomanticHut','_blank')">GitHub</button>
+                    <button class="btn" onclick=" window.open('https://www.romantichutparty.com/','_blank')">Demo</button>
                 </div>
             </div>
             <br>
             <br>
-            <!--Lunar Birthdays-->
+            <!--New Garden-->
             <div class="row text-left align-items-center">
                 <div class="col-xs-12 col-lg-6">
-                    <img class="img-fluid" src="assets/images/lunarbirthdays.jpg" alt="">
+                    <img class="img-fluid" src="assets/images/newgarden.jpg" alt="">
                 </div>
                 <div class="col-xs-12 col-lg-6">
-                    <div class="proj-title">Lunar Birthdays</div>
-                    <div class="proj-desc">Birthday Reminder & Converter</div>
+                    <div class="proj-title">New Garden</div>
+                    <div class="proj-desc">Restaurant Point of Sale System</div>
                     <p>
-                        Created a SwiftUI iOS app to save birthday profiles in core data
-                        and count down until the next. It will notify users of upcoming
-                        birthdays. The main idea is to help ABC's (American-born  Chinese)
-                        to help remember their family's birthdays since Lunar birthdays
-                        are never on the same day on Gregorian calendars.
+                        Created a Java Swing GUI, Point of Sale system that allows 
+                        self-service for food ordering during the pandemic. 
+                        It deploys PostgreSQL to store every menu item and dynamically
+                        retrieves the correct items based on the selected category.
+                        It also counts the frequency of each item so restocking is easier.
                     </p>
-                    <button class="btn" onclick=" window.open('https://github.com/johnnyj2608/LunarBirthdays','_blank')">GitHub</button>
+                    <button class="btn" onclick=" window.open('https://github.com/johnnyj2608/NewGarden','_blank')">GitHub</button>
+                    <button class="btn" onclick="confirmDownload()">Demo</button>
+                </div>
+            </div>
+            <br>
+            <br>
+            <!--Loot Council-->
+            <div class="row text-left align-items-center">
+                <div class="col-xs-12 col-lg-6">
+                    <img class="img-fluid" src="assets/images/lootcouncil.jpg" alt="">
+                </div>
+                <div class="col-xs-12 col-lg-6">
+                    <div class="proj-title">Loot Council</div>
+                    <div class="proj-desc">Web Scraper & Reward Allocator</div>
+                    <p>
+                        Developed a Python script to construct reward assignments for 
+                        World of Warcraft guilds. It utilizes web scraping techniques 
+                        and GraphQL to extract data to be used in the criterion. 
+                        Environment variables are used to safeguard API keys.
+                        GitHub Actions will automatically run the script once a week.
+                    </p>
+                    <button class="btn" onclick=" window.open('https://github.com/johnnyj2608/LootCouncil','_blank')">GitHub</button>
                 </div>
             </div>
         </div>
