--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                         are never on the same day on Gregorian calendars.
                     </p>
                     <button class="btn" onclick=" window.open('https://github.com/johnnyj2608/LunarBirthdays','_blank')">GitHub</button>
-                    <button class="btn"><a href="lunarbirthdays.html">Demo</a></button> 
+                    <button class="btn" onclick=" window.open('https://apps.apple.com/us/app/lunar-birthdays/id6468920519','_blank')">Demo</button>
                 </div>
             </div>
             <br>
