--- a/privacy.html
+++ b/privacy.html
@@ -11,39 +11,56 @@
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CH14JF6KNN"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-CH14JF6KNN"
+    ></script>
     <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-        gtag('config', 'G-CH14JF6KNN');
+      gtag("config", "G-CH14JF6KNN");
     </script>
-
   </head>
   <body>
     <section class="white">
       <div class="container-fluid">
         <div class="row text-center align-items-center">
           <div class="col">
-            <img class="img-fluid" src="assets/images/appicon.png" alt="" width="200" height="200">
+            <img
+              class="img-fluid"
+              src="assets/images/appicon.png"
+              alt=""
+              width="200"
+              height="200"
+            />
           </div>
         </div>
         <div class="row text-center align-items-center">
           <div class="col"></div>
           <div class="col">
             <h1>Privacy Policy</h1>
-            <br>
+            <br />
             <p>
-              Lunar Birthdays take your privacy very seriously. Beyond the information
-              Apple provides to developers that you can decide to provide, it uses no
-              third-party analytics or advertising frameworks. Lunar Birthdays logs no
-              information on you and has no interest in doing such.
-            <br>
-            <br>
-            <strong>Lunar Birthdays does not collect, transmit, distribute or sell your data.</strong>
-            <br>
-            <br>
+              Lunar Birthday use and transfer to any other app of information
+              received from Google APIs will adhere to
+              <a
+                href="https://developers.google.com/terms/api-services-user-data-policy"
+                target="_blank"
+                >Google API Services User Data Policy</a
+              >, including the Limited Use requirements.
+            </p>
+            <br />
+            <br />
+            <strong
+              >Lunar Birthdays does not collect, transmit, distribute or sell
+              your data.</strong
+            >
+            <br />
+            <br />
             <p>© 2023 Johnny Jiang. All Rights Reserved.</p>
           </div>
           <div class="col"></div>
