--- a/index.html
+++ b/index.html
@@ -270,6 +270,8 @@
                         to help remember their family's birthdays since Lunar birthdays
                         are never on the same day on Gregorian calendars.
                     </p>
+                    <div class="proj-desc"><a href="privacy.html">Privacy Policy</a></div>
+                    <a href="privacy.html" class="proj-desc"></a>
                     <button class="btn" onclick=" window.open('https://github.com/johnnyj2608/LunarBirthdays','_blank')">GitHub</button>
                     <button class="btn" onclick=" window.open('https://apps.apple.com/us/app/lunar-birthdays/id6468920519','_blank')">Demo</button>
                 </div>
