Fixed privacy URL

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                         to help remember their family's birthdays since Lunar birthdays
                         are never on the same day on Gregorian calendars.
                     </p>
-                    <div class="proj-desc"><a href="johnnyjiang.com/privacy">Privacy Policy</a></div>
+                    <div class="proj-desc"><a href="/privacy">Privacy Policy</a></div>
                     <button class="btn" onclick=" window.open('https://github.com/johnnyj2608/LunarBirthdays','_blank')">GitHub</button>
                     <button class="btn" onclick=" window.open('https://apps.apple.com/us/app/lunar-birthdays/id6468920519','_blank')">Demo</button>
                 </div>
