Updated privacy policy

--- a/privacy.html
+++ b/privacy.html
@@ -54,6 +54,14 @@
               >, including the Limited Use requirements.
             </p>
             <br />
+            <p>
+              We only access Google user data to create calendar events. The
+              data obtained is solely used for integrating our app with your
+              calendar. We don't store or save any Google user data; it's
+              processed in real-time. Your data is not shared, sold, or
+              disclosed to third parties.
+            </p>
+            <br />
             <p>© 2023 Johnny Jiang. All Rights Reserved.</p>
           </div>
           <div class="col"></div>
