Updated project name

--- a/index.html
+++ b/index.html
@@ -298,22 +298,22 @@
             </div>
             <br>
             <br>
-            <!--New Garden-->
+            <!--Restaurant POS-->
             <div class="row text-left align-items-center">
                 <div class="col-xs-12 col-lg-6">
                     <img class="img-fluid" src="assets/images/newgarden.jpg" alt="">
                 </div>
                 <div class="col-xs-12 col-lg-6">
-                    <div class="proj-title">New Garden</div>
-                    <div class="proj-desc">Restaurant Point of Sale System</div>
+                    <div class="proj-title">Restaurant POS</div>
+                    <div class="proj-desc">Point-of-Sale System</div>
                     <p>
-                        Created a Java Swing GUI, Point of Sale system that allows 
+                        Created a Java Swing GUI, Point-of-Sale system that allows 
                         self-service for food ordering during the pandemic. 
                         It deploys PostgreSQL to store every menu item and dynamically
                         retrieves the correct items based on the selected category.
                         It also counts the frequency of each item so restocking is easier.
                     </p>
-                    <button class="btn" onclick=" window.open('https://github.com/johnnyj2608/NewGarden','_blank')">GitHub</button>
+                    <button class="btn" onclick=" window.open('https://github.com/johnnyj2608/RestaurantPOS','_blank')">GitHub</button>
                     <button class="btn" onclick="confirmDownload()">Demo</button>
                 </div>
             </div>
