Updated website with new project

--- a/index.html
+++ b/index.html
@@ -220,18 +220,22 @@
               <!--An Kang-->
               <li>
                 <time class="exp-date"
-                  ><span><b>May '22 - Present</b></span></time
+                  ><span><b>June '22 - Present</b></span></time
                 >
                 <div class="exp-icon"></div>
                 <div class="exp-card">
                   <h4>
                     <strong>An Kang Social Day Care</strong> |
-                    <em>Computer Technician</em>
+                    <em>IT Support Engineer</em>
                   </h4>
-                  <p>
-                    Resolving software and application issues for over 400
-                    people. Overhauled the bookkeeping system to formulaic
-                    spreadsheets, saving 7.5 hours biweekly.
+                  <p>- Conserved 40 hours monthly by developing a Python 
+                    script to automate the creation of 500+ unique timesheets
+                    <br>- Developed a responsive Bootstrap website to showcase 
+                    services offered, attracting 1,600 monthly visitors
+                    <br>- Decreased average customer wait time by 15 minutes by 
+                    implementing a ticket system for help requests
+                    <br>- Assisted 10 clients daily by resolving software issues and 
+                    conducting user training on new applications
                   </p>
                 </div>
               </li>
@@ -246,10 +250,15 @@
                     <strong>Siemens Digital Industries Software</strong> |
                     <em>Software Engineer Intern</em>
                   </h4>
-                  <p>
-                    An ML / AI focused role. Utilized TensorFlow to classify
-                    sentences, ran tests for OpenAI API (ChatGPT), and
-                    researched the What-If-Tool for Explainable AI.
+                  <p>- Applied k-means clustering on population density data 
+                    of 300k to locate optimal stops for a mobile health clinic
+                    <br>- Leveraged Anadonda’s debugger and virtual environment 
+                    to resolve 2 legacy codebases with outdated libraries
+                    <br>- Employed OpenAI API to generate training data of block 
+                    descriptions containing up to 3 features per sentence
+                    <br>- Conducted research on Explainable AI tools, assessed tradeoffs, 
+                    and authored documentation introducing the What-If-Tool to 
+                    enhance transparency in models’ decision-making process
                   </p>
                   <br />
                   <img
@@ -275,11 +284,9 @@
                 <div class="exp-icon"></div>
                 <div class="exp-card">
                   <h4><strong>The Pennsylvania State University</strong></h4>
-                  <p>
-                    - Bachelor of Science in Computer Science <br />- 2019
-                    Hackathon JPMorgan Sponsored Challenge Winner (900+
-                    participants) <br />- Leonhard Center Speaking Contest
-                    semi-finalist (Top 3%)
+                  <p>- Bachelor of Science in Computer Science 
+                    <br />- 2019 Hackathon JPMorgan Sponsored Challenge Winner (900+ participants) 
+                    <br />- Leonhard Center Speaking Contest semi-finalist (Top 3%)
                   </p>
                   <br />
                   <img class="img-fluid" src="assets/images/grad.jpg" alt="" />
@@ -380,6 +387,32 @@
         </div>
         <br />
         <br />
+        <!--Timesheet-->
+        <div class="row text-left align-items-center">
+          <div class="col-xs-12 col-lg-6">
+            <img class="img-fluid" src="assets/images/timesheet.jpg" alt="" />
+          </div>
+          <div class="col-xs-12 col-lg-6">
+            <div class="proj-title">Timesheet</div>
+            <div class="proj-desc">Excel Modification Automation</div>
+            <p>
+              Developed a Python script with a GUI to automate the timesheet
+              creation process. For the start of every new month, over 500 
+              unique timesheets are neededed. Achieved 40 hours of monthly 
+              time-savings by constructing this script. Timesheets
+              are curated based on service days, month, and year.
+            </p>
+            <button
+              class="btn"
+              onclick=" window.open('https://github.com/johnnyj2608/Timesheet','_blank')"
+            >
+              GitHub
+            </button>
+            <button class="btn" onclick="confirmDownload('assets/updateTimesheets.exe', 'updateTimesheets.exe')">Demo</button>
+          </div>
+        </div>
+        <br />
+        <br />
         <!--Romantic Hut-->
         <div class="row text-left align-items-center">
           <div class="col-xs-12 col-lg-6">
@@ -432,7 +465,7 @@
             >
               GitHub
             </button>
-            <button class="btn" onclick="confirmDownload()">Demo</button>
+            <button class="btn" onclick="confirmDownload('assets/NewGardenProject.jar', 'NewGardenProject.jar')">Demo</button>
           </div>
         </div>
         <br />
