--- a/index.html
+++ b/index.html
@@ -226,16 +226,16 @@
                 <div class="exp-card">
                   <h4>
                     <strong>An Kang Social Day Care</strong> |
-                    <em>IT Support Engineer</em>
+                    <em>Software Engineer</em>
                   </h4>
-                  <p>- Conserved 40 hours monthly by developing a Python 
-                    script to automate the creation of 500+ unique timesheets
-                    <br>- Developed a responsive Bootstrap website to showcase 
-                    services offered, attracting 1,600 monthly visitors
-                    <br>- Decreased average customer wait time by 15 minutes by 
-                    implementing a ticket system for help requests
-                    <br>- Assisted 10 clients daily by resolving software issues and 
-                    conducting user training on new applications
+                  <p>- Saving 45 hours monthly by developing a Python script 
+                    to automate the creation of unique timesheets in Excel
+                    <br>- Built a Django web app with REST APIs to facilitate 
+                    food ordering between staff and 500+ members remotely
+                    <br>- Created a responsive Bootstrap website to showcase 
+                    services offered, attracting 1,600 online visitors per month
+                    <br>- Utilized Twilio API and Google Apps Script to 
+                    automate responses for scheduling with potential clients
                   </p>
                 </div>
               </li>
@@ -256,9 +256,6 @@
                     to resolve 2 legacy codebases with outdated libraries
                     <br>- Employed OpenAI API to generate training data of block 
                     descriptions containing up to 3 features per sentence
-                    <br>- Conducted research on Explainable AI tools, assessed tradeoffs, 
-                    and authored documentation introducing the What-If-Tool to 
-                    enhance transparency in models’ decision-making process
                   </p>
                   <br />
                   <img
