--- a/index.html
+++ b/index.html
@@ -228,14 +228,14 @@
                     <strong>An Kang Social Day Care</strong> |
                     <em>Software Engineer</em>
                   </h4>
-                  <p>- Saving 45 hours monthly by developing a Python script 
+                  <p>- Saving 45 hours monthly by building a Python script 
                     to automate the creation of unique timesheets in Excel
-                    <br>- Built a Django web app with REST APIs to facilitate 
+                    <br>- Developed a Django web app to facilitate daily 
                     food ordering between staff and 500+ members remotely
                     <br>- Created a responsive Bootstrap website to showcase 
                     services offered, attracting 1,600 online visitors per month
-                    <br>- Utilized Twilio API and Google Apps Script to 
-                    automate responses for scheduling with potential clients
+                    <br>- Automated online inquiries regarding on-site tour 
+                    availability using Twilio API and Google Apps Script
                   </p>
                 </div>
               </li>
