Fixed typo on resume

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                     <strong>An Kang Social Day Care</strong> |
                     <em>Software Engineer</em>
                   </h4>
-                  <p>- Saving 45 hours monthly by building a Python script 
+                  <p>- Saved 45 hours monthly by building a Python script 
                     to automate the creation of unique timesheets in Excel
                     <br>- Developed a Django web app to facilitate daily 
                     food ordering between staff and 500+ members remotely
