--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@
                   </h4>
                   <p>- Saved 45 hours monthly by building a Python script 
                     to automate the creation of unique timesheets in Excel
-                    <br>- Developed a Django web app to facilitate daily 
-                    food ordering between staff and 500+ members remotely
+                    <br>- Developed a SwiftUI app with Firebase to facilitate 
+                    real-time communication between staff and 500+ members
                     <br>- Created a responsive Bootstrap website to showcase 
                     services offered, attracting 1,600 online visitors per month
                     <br>- Automated online inquiries regarding on-site tour 
