--- a/index.html
+++ b/index.html
@@ -230,12 +230,13 @@
                   </h4>
                   <p>- Saved 45 hours monthly by building a Python script 
                     to automate the creation of unique timesheets in Excel
-                    <br>- Developed a SwiftUI app with Firebase to facilitate 
-                    real-time communication between staff and 500+ members
-                    <br>- Created a responsive Bootstrap website to showcase 
-                    services offered, attracting 1,600 online visitors per month
-                    <br>- Automated online inquiries regarding on-site tour 
-                    availability using Twilio API and Google Apps Script
+                    <br>- Used Selenium to automate insurance claim submissions, 
+                    increasing efficiency by 80% for 400 clients biweekly
+                    <br>- Designed a responsive Bootstrap website to showcase 
+                    services offered, attracting 1,600 visitors per month
+                    <br>- Automated replies for online inquiries regarding 
+                    on-site tour availability using Twilio API and Apps Script
+
                   </p>
                 </div>
               </li>
@@ -380,6 +381,34 @@
             >
               Demo
             </button>
+          </div>
+        </div>
+        <br />
+        <br />
+        <!--Claimbot-->
+        <div class="row text-left align-items-center">
+          <div class="col-xs-12 col-lg-6">
+            <img class="img-fluid" src="assets/images/claimbot.jpg" alt="" />
+          </div>
+          <div class="col-xs-12 col-lg-6">
+            <div class="proj-title">Claimbot</div>
+            <div class="proj-desc">Automate Insurance Claim Submission</div>
+            <p>
+              Developed a Python script with CTkinter and Selenium to automate
+              submitting health insurance claims on Office Ally. It uses an 
+              Excel template to pull account and member information to autofill
+              claim forms. By selecting which member list and range of dates,
+              it will automatically submit each claim and record the total value.
+              This program has increased efficiency of submitting claims
+              by 80% for 400 clients biweekly.
+            </p>
+            <button
+              class="btn"
+              onclick=" window.open('https://github.com/johnnyj2608/Claimbot','_blank')"
+            >
+              GitHub
+            </button>
+            <!-- <button class="btn" onclick="confirmDownload('assets/updateTimesheets.exe', 'updateTimesheets.exe')">Demo</button> -->
           </div>
         </div>
         <br />
