--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
                     <strong>An Kang Social Day Care</strong> |
                     <em>Software Engineer</em>
                   </h4>
-                  <p>- Saved 45 hours monthly by building a Python script 
-                    to automate the creation of unique timesheets in Excel
+                  <p>- Saved 45 hours monthly by developing a Python script to 
+                    automate individualized timesheet creation in Excel
                     <br>- Used Selenium to automate insurance claim submissions, 
                     increasing efficiency by 80% for 400 clients biweekly
                     <br>- Designed a responsive Bootstrap website to showcase 
@@ -398,9 +398,9 @@
               submitting health insurance claims on Office Ally. It uses an 
               Excel template to pull account and member information to autofill
               claim forms. By selecting which member list and range of dates,
-              it will automatically submit each claim and record the total value.
-              This program has increased efficiency of submitting claims
-              by 80% for 400 clients biweekly.
+              it will automatically submit and download each claim and 
+              record the total value. This program has increased efficiency 
+              of submitting claims by 80% for 400 clients biweekly.
             </p>
             <button
               class="btn"
@@ -435,6 +435,35 @@
               GitHub
             </button>
             <button class="btn" onclick="confirmDownload('assets/updateTimesheets.exe', 'updateTimesheets.exe')">Demo</button>
+          </div>
+        </div>
+        <br />
+        <br />
+        <!--Senior Connect-->
+        <div class="row text-left align-items-center">
+          <div class="col-xs-12 col-lg-6">
+            <img
+              class="img-fluid"
+              src="assets/images/seniorconnect.png"
+              alt=""
+            />
+          </div>
+          <div class="col-xs-12 col-lg-6">
+            <div class="proj-title">Senior Connect</div>
+            <div class="proj-desc">SADC Management App</div>
+            <p>
+              Created a SwiftUI iOS app with Firebase integration to
+              facilitate communication between social adult day care members
+              and staff. Also supports user management for the staff, allowing
+              paperwork to be saved and done digitally. Invitation-based
+              onboarding where one account can only be affiliated with one SADC.
+            </p>
+            <button
+              class="btn"
+              onclick=" window.open('https://github.com/johnnyj2608/SeniorConnect','_blank')"
+            >
+              GitHub
+            </button>
           </div>
         </div>
         <br />
