Project images fixed sizes

--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
         <div class="row text-left align-items-center">
           <div class="col-xs-12 col-lg-6">
             <img
-              class="img-fluid"
+              class="img-fluid proj-img"
               src="assets/images/lunarbirthdays.jpg"
               alt=""
             />
@@ -387,7 +387,7 @@
         <br />
         <!--Claimbot-->
         <div class="row text-left align-items-center">
-          <div class="col-xs-12 col-lg-6">
+          <div class="col-xs-12 col-lg-6 proj-img">
             <img class="img-fluid" src="assets/images/claimbot.jpg" alt="" />
           </div>
           <div class="col-xs-12 col-lg-6">
@@ -408,14 +408,14 @@
             >
               GitHub
             </button>
-            <!-- <button class="btn" onclick="confirmDownload('assets/updateTimesheets.exe', 'updateTimesheets.exe')">Demo</button> -->
+            <button class="btn" onclick="confirmDownload('assets/claimBot.exe', 'claimBot.exe')">Demo</button>
           </div>
         </div>
         <br />
         <br />
         <!--Timesheet-->
         <div class="row text-left align-items-center">
-          <div class="col-xs-12 col-lg-6">
+          <div class="col-xs-12 col-lg-6 proj-img">
             <img class="img-fluid" src="assets/images/timesheet.jpg" alt="" />
           </div>
           <div class="col-xs-12 col-lg-6">
@@ -441,7 +441,7 @@
         <br />
         <!--Senior Connect-->
         <div class="row text-left align-items-center">
-          <div class="col-xs-12 col-lg-6">
+          <div class="col-xs-12 col-lg-6 proj-img">
             <img
               class="img-fluid"
               src="assets/images/seniorconnect.png"
@@ -470,7 +470,7 @@
         <br />
         <!--Romantic Hut-->
         <div class="row text-left align-items-center">
-          <div class="col-xs-12 col-lg-6">
+          <div class="col-xs-12 col-lg-6 proj-img">
             <img class="img-fluid" src="assets/images/romantichut.jpg" alt="" />
           </div>
           <div class="col-xs-12 col-lg-6">
@@ -501,7 +501,7 @@
         <br />
         <!--Restaurant POS-->
         <div class="row text-left align-items-center">
-          <div class="col-xs-12 col-lg-6">
+          <div class="col-xs-12 col-lg-6 proj-img">
             <img class="img-fluid" src="assets/images/newgarden.jpg" alt="" />
           </div>
           <div class="col-xs-12 col-lg-6">
@@ -527,7 +527,7 @@
         <br />
         <!--Loot Council-->
         <div class="row text-left align-items-center">
-          <div class="col-xs-12 col-lg-6">
+          <div class="col-xs-12 col-lg-6 proj-img">
             <img class="img-fluid" src="assets/images/lootcouncil.jpg" alt="" />
           </div>
           <div class="col-xs-12 col-lg-6">
