--- a/index.html
+++ b/index.html
@@ -307,6 +307,23 @@
                   <img class="img-fluid" src="assets/images/gdsc.jpg" alt="" />
                 </div>
               </li>
+              <!--EON-->
+              <li>
+                <div class="exp-icon"></div>
+                <div class="exp-card">
+                  <h4>
+                    <strong>Engineering Orientation Network</strong> |
+                    <em>Head Mentor</em>
+                  </h4>
+                  <p>
+                    Provided mentorship to 8 first-year engineering students
+                    per semester. Also contributed to the orientation events
+                    and material
+                  </p>
+                  <br />
+                  <img class="img-fluid" src="assets/images/.jpg" alt="" />
+                </div>
+              </li>
               <!--IM-->
               <li>
                 <div class="exp-icon"></div>
@@ -380,6 +397,12 @@
               onclick=" window.open('https://apps.apple.com/us/app/lunar-birthdays/id6468920519','_blank')"
             >
               Demo
+            </button>
+            <button
+              class="btn"
+              onclick=" window.open('https://apps.apple.com/us/app/lunar-birthdays/id6468920519','_blank')"
+            >
+              App Store
             </button>
           </div>
         </div>
